force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__AbstractionType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AbstractionType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abstraction Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AbstractionType</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>