force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__ActivityAssignmentTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignmentTemplateCount__c</fullName>
    <label>Number of Template Assignments</label>
    <summaryForeignKey>KimbleOne__ActivityAssignmentTemplate__c.KimbleOne__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>