force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__AnnuityTemplateBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AnnuityTemplateBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Annuity Template Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products (Annuity Template Behaviour Rule)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>