force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__ConfigCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ConfigCode__c</fullName>
    <externalId>true</externalId>
    <label>ConfigCode</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>