force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__CreditTemplateBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditTemplateBehaviourRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Template Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products (Credit Template Behaviour Rule)</relationshipLabel>
    <relationshipName>CreditProducts</relationshipName>
    <type>Lookup</type>
</CustomField>