force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__DefaultDescription__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultDescription__c</fullName>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>