force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__ExpenseCategoryProfileTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategoryProfileTemplateCount__c</fullName>
    <label>Number of Template Exp Category Profiles</label>
    <summaryForeignKey>KimbleOne__ExpenseCategoryProfileTemplate__c.KimbleOne__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>