force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__ExpenseCategoryProfileTmpltBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategoryProfileTmpltBehaviourRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Cat Profile Tmplt Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products (Expense Cat Profile Tmplt Behaviour Rule)</relationshipLabel>
    <relationshipName>ExpenseCategoryProfileProducts</relationshipName>
    <type>Lookup</type>
</CustomField>