force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__InternalRevenueBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalRevenueBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Internal Revenue Behaviour Rule</label>
    <referenceTo>KimbleOne__InternalRevenueBehaviourRule__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>