force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>