force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__MilestoneTemplateBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneTemplateBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Milestone Template Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products (Milestone Template Behaviour Rule)</relationshipLabel>
    <relationshipName>MilestoneProducts</relationshipName>
    <type>Lookup</type>
</CustomField>