force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__MilestoneTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneTemplateCount__c</fullName>
    <label>Number of Template Milestones</label>
    <summaryForeignKey>KimbleOne__MilestoneTemplate__c.KimbleOne__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>