force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__ProductType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ProductType</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Product (ProductType)</relationshipLabel>
    <relationshipName>ProductTypeProducts</relationshipName>
    <type>Lookup</type>
</CustomField>