force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__TaskTemplateBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskTemplateBehaviourRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products (Task Template Behaviour Rule)</relationshipLabel>
    <relationshipName>TaskProducts</relationshipName>
    <type>Lookup</type>
</CustomField>