force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__TaskTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskTemplateCount__c</fullName>
    <label>Number of Template Tasks</label>
    <summaryForeignKey>KimbleOne__TaskTemplate__c.KimbleOne__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>