force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__UsageTemplateBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageTemplateBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Template Behaviour Rule</label>
    <referenceTo>KimbleOne__ProductTemplateBehaviourRule__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>UsageProducts</relationshipName>
    <type>Lookup</type>
</CustomField>