force-app/main/default/objects/KimbleOne__Product__c/fields/KimbleOne__WorkItemTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WorkItemTemplateCount__c</fullName>
    <label>Number of Template Work Items</label>
    <summaryFilterItems>
        <field>KimbleOne__WorkItemTemplate__c.KimbleOne__Units__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__WorkItemTemplate__c.KimbleOne__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>