force-app/main/default/objects/KimbleOne__Product__c/validationRules/KimbleOne__BusinessUnitMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__BusinessUnitMandatory</fullName>
    <active>true</active>
    <description>Business Unit is Mandatory if Product Domain Cost or Revenue Allocation Model is Product Owner</description>
    <errorConditionFormula>( KimbleOne__ProductDomain__r.KimbleOne__CostAllocationModel__r.KimbleOne__Enum__c = &apos;ProductOwner&apos;  ||  KimbleOne__ProductDomain__r.KimbleOne__RevenueAllocationModel__r.KimbleOne__Enum__c = &apos;ProductOwner&apos; ) &amp;&amp;  ISBLANK( KimbleOne__BusinessUnit__c )</errorConditionFormula>
    <errorDisplayField>KimbleOne__BusinessUnit__c</errorDisplayField>
    <errorMessage>Business Unit must be entered if the Product Domain Cost or Revenue Allocation Model is &quot;Business Unit&quot;</errorMessage>
</ValidationRule>