force-app/main/default/objects/KimbleOne__Product__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>KimbleOne__ProductDomain__c</columns>
    <columns>KimbleOne__IsActive__c</columns>
    <columns>KimbleOne__IsAbstract__c</columns>
    <columns>KimbleOne__BusinessUnit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>